tests/fixtures/invalid/none_pos.py
# Cannot use unary + on None
x: none = +None
